Integrate Signal 4.73.4